Rubocop fix: refactors raise call to an exception class and message as separate arguments

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -148,7 +148,7 @@ Style/PreferredHashMethods:
 
 Style/RaiseArgs:
   Enabled: true
-  EnforcedStyle: compact
+  EnforcedStyle: exploded
 
 Style/Encoding:
   Enabled: true
